fixed: skills columns on mobile phones

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -101,3 +101,9 @@
     text-align: justify;
   }
 }
+
+@media screen and (max-width: 441px) {
+  #experience {
+    zoom: 0.88
+  }
+}
